[package]
name = "trainlappcomms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
chrono = "0.4"
futures = "0.3"
geo = { version = "0.28", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = "^1.38"
tokio-util = { version = "0.7", features = ["codec"] }
truinlag = { git = "https://github.com/oocraftrabbitoo/truinlag", version = "0.1.0" }
