[package]
name = "trainlappcomms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
geo = { version = "0.28.0", features = ["serde"] }
image = { version = "0.25.6", optional = true }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["net"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
truinlag = { git = "https://github.com/oocraftrabbitoo/truinlag", version = "0.1.0", optional = true }

[features]
build-binary = ["truinlag", "image"]

[[bin]]
name = "trainlappcomms"
required-features = ["build-binary"]
